# Syzygy-Intelligence-

./: .gitignore  README.md  WHITEPAPER.md  check_url.sh
syzygy-intelligence/backend/: .dockerignore  Dockerfile  alembic.ini  migrate.py  pyproject.toml  requirements.txt
syzygy-intelligence/backend/app/: audit.py  config.py  errors.py  logging_setup.py  main.py  notifications.py  observability.py
syzygy-intelligence/backend/app/agents/: __init__.py  archetypes.py  base.py  personas.py  polarity.py  registry.py  shadow.py
syzygy-intelligence/backend/app/api/: auth.py  openai_compat.py  websockets.py
syzygy-intelligence/backend/app/consensus/: __init__.py  engine.py  phases.py  scoring.py  synthesis.py
syzygy-intelligence/backend/migrations/: env.py
syzygy-intelligence/backend/tests/: conftest.py  mock_ollama_server.py  test_admin.py  test_agents.py  test_agents_routes.py  test_assessment.py  test_audit.py  test_audit_routes.py  test_audit_service.py  test_auth.py  test_auth_routes.py  test_auth_utils.py  test_browser.py  test_chat.py  test_checkpointing.py  test_config_errors.py  test_consensus.py  test_consensus_integration.py  test_consensus_routes.py  test_db_models.py  test_db_session.py  test_email.py  test_errors.py  test_examples.py  test_finetune.py  test_gating.py  test_graph_memory.py  test_health.py  test_image_gen.py  test_legal.py  test_llm.py  test_llm_clients.py  test_llm_integration.py  test_llm_orchestration.py  test_logging_setup.py  test_main.py  test_meeting.py  test_memory.py  test_memory_base.py  test_memory_routes.py  (+33 more)
(+296 files in other folders)
